# Pandemic-AI

./: ai_to_create_fun_games.md  coup.py  game_creation_abstraction.md  gen_rust_city_graph.py  pandemic_ai.py  pandemic_game.py  pandemic_simple_ai.py  test_pandemic_ai.py
pandemic_rust/: Cargo.toml  build.rs  city_graph2.rs
pandemic_rust/src/: agent.rs  city_diseases.json  city_diseases_upper_camel_case.json  city_graph.json  city_graph.rs  city_graph_template.rs.hbs  city_graph_upper_camel_case.json  game_enums.rs  lib.rs  main.rs  pandemic_game.rs
