[package]
name = "pandemic_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
serde_json = "1.0.93"
strum = "0.24.1"
strum_macros = "0.24.3"

[build]

[build-dependencies]
regex = "1.7.1"
serde_json = "1.0.93"
